# earworm

./: .gitignore  LICENCE  README.md  claude.md  pyproject.toml
docs/: CONTRIBUTING.md
earworm/: __init__.py
earworm/difficulty/: analyse.py  simplify.py
earworm/pipeline/: fetch.py  process.py  separate.py  transcribe.py
earworm/web/: __init__.py
earworm_app/: README.md  pubspec.yaml
earworm_app/ios/Runner/: Info.plist
earworm_app/ios/Runner.xcodeproj/: project.pbxproj
earworm_app/lib/: main.dart
earworm_app/lib/models/: note_event.dart  play_session.dart  song.dart
earworm_app/lib/providers/: midi_input_provider.dart  playback_provider.dart  score_provider.dart  song_provider.dart
earworm_app/lib/repositories/: song_repository.dart
earworm_app/lib/screens/: home_screen.dart  play_screen.dart  settings_screen.dart
earworm_app/lib/services/: midi_input.dart  midi_parser.dart  note_matcher.dart  playback_clock.dart
earworm_app/lib/widgets/: difficulty_selector.dart  falling_notes_painter.dart  piano_keyboard.dart  score_display.dart
earworm_app/macos/Flutter/: GeneratedPluginRegistrant.swift
earworm_app/macos/Runner.xcodeproj/: project.pbxproj
earworm_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
earworm_app/macos/Runner/Configs/: AppInfo.xcconfig
earworm_app/test/: midi_parser_test.dart  note_matcher_test.dart  playback_clock_test.dart
tests/: test_difficulty.py
