[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earworm"
version = "0.1.0"
description = "Turn any song into a piano lesson"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Earworm contributors" },
]
keywords = ["piano", "midi", "music", "transcription", "learning"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "yt-dlp>=2024.0.0",
    "demucs>=4.0.0",
    "mido>=1.3.0",
    "music21>=9.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydub>=0.25.0",
]

[project.optional-dependencies]
bytedance = ["piano_transcription_inference"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
earworm = "earworm.pipeline.process:process"

[project.urls]
Homepage = "https://github.com/birdmeister/earworm"
Repository = "https://github.com/birdmeister/earworm"
Issues = "https://github.com/birdmeister/earworm/issues"

[tool.setuptools.packages.find]
include = ["earworm*"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
